# xbot_msgs

./: .gitignore  CMakeLists.txt  package.xml
cmake/: GenerateDeb.cmake
launch/: joint_state_publisher.launch
msg/: AuxState.msg  CustomState.msg  Fault.msg  JointCommand.msg  JointDeviceInfo.msg  JointState.msg  LifecycleEvent.msg  PingPong.msg  Statistics.msg  TaskStatistics.msg  ThreadStatistics.msg
src/: joint_state_publisher  xbot_sensor_msgs_bridge.cpp
srv/: GetParameterInfo.srv  GetStringList.srv  SetAuxFields.srv  SetControlMask.srv  SetString.srv  StartProcess.srv  StopProcess.srv
